--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-pandas>=1.5.0
-streamlit>=1.28.0
-plotly>=5.15.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-websockets>=11.0.0
-requests>=2.31.0
+streamlit==1.28.1
+pandas==2.0.3
