--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 streamlit==1.28.1
 pandas==2.0.3
 plotly==5.15.0
+requests==2.31.0
+numpy==1.24.3
+scikit-learn==1.3.0
+websockets==11.0.3
+flask==2.3.3
