--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ numpy==1.24.3
 scikit-learn==1.3.0
 websockets==11.0.3
 flask==2.3.3
+psutil==5.9.5
+python-dateutil==2.8.2
+psutil==5.9.5
+python-dateutil==2.8.2
