--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ websockets==11.0.3
 flask==2.3.3
 psutil==5.9.5
 python-dateutil==2.8.2
+pytest==7.4.0
+coverage==7.2.7
 psutil==5.9.5
 python-dateutil==2.8.2
